--- a/AssistantApp/templates/AssistantApp/agenda.html
+++ b/AssistantApp/templates/AssistantApp/agenda.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Agenda</title>
-
+<!--    here is a git push test-->
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'AssistantApp/style.css' %}">
     <script src="{% static 'AssistantApp/index.js' %}"></script>
