Zishuo: add registration

--- a/AssistantApp/templates/AssistantApp/main.html
+++ b/AssistantApp/templates/AssistantApp/main.html
@@ -19,7 +19,7 @@
 <div class="head-bar" style="color: #f3f7fa">
     <p><span> </span><i class="fa-solid fa-user"></i> My Personal Assistant</p>
     <a href="{% url 'login' %}">Log in</a> /
-    <a href="{% url 'login' %}">Sign up</a>
+    <a href="{% url 'Register' %}">Sign up</a>
 </div>
 
 <div class="main-page-content">
