--- a/AssistantApp/templates/AssistantApp/showtask.html
+++ b/AssistantApp/templates/AssistantApp/showtask.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="new-task">
-    <form action="" method="POST">
+    <form action="" method="POST" style="margin-top: 100px">
             <div class="new-task-item">
                 <span>Task Name</span><br>
                 <div>{{task.taskname}}</div>
@@ -59,6 +59,8 @@
                 <div>{{task.detail}}</div>
             </div>
     </form>
+    <img style="width: 400px; height: 500px; margin-left: 350px; margin-top: -400px"
+         src="https://maps.googleapis.com/maps/api/staticmap?center=WestLafayette&zoom=14&size=400x500&key=AIzaSyCf0T-bho9t6moCVd_EmfB3xfUbmV1C3Ac">
 </div>
 
 <div class="footer-bar">
